fixed padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,10 +182,10 @@ h3 {
         position: static;
     }
     #title .row {
-        padding-right: 3em;
+        padding-right: 4em;
     }
     #keys .row{
-        padding-right: 3em;
+        padding-right: 4em;
     }
     #cta {
         padding-left: 3em;
